// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationChrome Snapshot Tests Dark mode renders correctly in dark mode 1`] = `
<View
  accessibilityHint="intensity=20,tint=systemUltraThinMaterial"
  style={
    [
      {
        "borderBottomWidth": 0.5,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 5,
      },
      {
        "borderBottomColor": "rgba(84, 84, 88, 0.65)",
        "paddingTop": 47,
      },
    ]
  }
  testID="blur-view"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "space-between",
        "paddingHorizontal": 4,
      }
    }
  >
    <View
      style={
        {
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityHint="Double tap to open or close the session sidebar"
        accessibilityLabel="Toggle sidebar"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          testID="svg"
          viewBox="0 0 20 20"
          width={20}
        >
          <Text
            testID="svg-path"
          >
            M3 5h14M3 10h14M3 15h14
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        accessibilityRole="header"
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 17,
              "fontWeight": "600",
              "textAlign": "center",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        New Chat
      </Text>
    </View>
    <View
      style={
        {
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityHint="Double tap to open the settings screen"
        accessibilityLabel="Open settings"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          testID="svg"
          viewBox="0 0 20 20"
          width={20}
        >
          <Text
            testID="svg-path"
          >
            M10 12.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z
          </Text>
          <Text
            testID="svg-path"
          >
            M16.2 12.5a1.4 1.4 0 00.28 1.54l.05.05a1.7 1.7 0 01-1.2 2.9 1.7 1.7 0 01-1.2-.5l-.05-.04a1.4 1.4 0 00-1.54-.28 1.4 1.4 0 00-.84 1.28v.15a1.7 1.7 0 01-3.4 0v-.08a1.4 1.4 0 00-.92-1.28 1.4 1.4 0 00-1.54.28l-.05.05a1.7 1.7 0 01-2.4-2.4l.04-.05a1.4 1.4 0 00.28-1.54 1.4 1.4 0 00-1.28-.84h-.15a1.7 1.7 0 010-3.4h.08a1.4 1.4 0 001.28-.92 1.4 1.4 0 00-.28-1.54l-.05-.05a1.7 1.7 0 012.4-2.4l.05.04a1.4 1.4 0 001.54.28h.07a1.4 1.4 0 00.84-1.28v-.15a1.7 1.7 0 013.4 0v.08a1.4 1.4 0 00.84 1.28 1.4 1.4 0 001.54-.28l.05-.05a1.7 1.7 0 012.4 2.4l-.04.05a1.4 1.4 0 00-.28 1.54v.07a1.4 1.4 0 001.28.84h.15a1.7 1.7 0 010 3.4h-.08a1.4 1.4 0 00-1.28.84z
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`NavigationChrome Snapshot Tests Dark mode renders with a long title in dark mode 1`] = `
<View
  accessibilityHint="intensity=20,tint=systemUltraThinMaterial"
  style={
    [
      {
        "borderBottomWidth": 0.5,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 5,
      },
      {
        "borderBottomColor": "rgba(84, 84, 88, 0.65)",
        "paddingTop": 47,
      },
    ]
  }
  testID="blur-view"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "space-between",
        "paddingHorizontal": 4,
      }
    }
  >
    <View
      style={
        {
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityHint="Double tap to open or close the session sidebar"
        accessibilityLabel="Toggle sidebar"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          testID="svg"
          viewBox="0 0 20 20"
          width={20}
        >
          <Text
            testID="svg-path"
          >
            M3 5h14M3 10h14M3 15h14
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        accessibilityRole="header"
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 17,
              "fontWeight": "600",
              "textAlign": "center",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        This is a very long session title that should be truncated with an ellipsis
      </Text>
    </View>
    <View
      style={
        {
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityHint="Double tap to open the settings screen"
        accessibilityLabel="Open settings"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          testID="svg"
          viewBox="0 0 20 20"
          width={20}
        >
          <Text
            testID="svg-path"
          >
            M10 12.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z
          </Text>
          <Text
            testID="svg-path"
          >
            M16.2 12.5a1.4 1.4 0 00.28 1.54l.05.05a1.7 1.7 0 01-1.2 2.9 1.7 1.7 0 01-1.2-.5l-.05-.04a1.4 1.4 0 00-1.54-.28 1.4 1.4 0 00-.84 1.28v.15a1.7 1.7 0 01-3.4 0v-.08a1.4 1.4 0 00-.92-1.28 1.4 1.4 0 00-1.54.28l-.05.05a1.7 1.7 0 01-2.4-2.4l.04-.05a1.4 1.4 0 00.28-1.54 1.4 1.4 0 00-1.28-.84h-.15a1.7 1.7 0 010-3.4h.08a1.4 1.4 0 001.28-.92 1.4 1.4 0 00-.28-1.54l-.05-.05a1.7 1.7 0 012.4-2.4l.05.04a1.4 1.4 0 001.54.28h.07a1.4 1.4 0 00.84-1.28v-.15a1.7 1.7 0 013.4 0v.08a1.4 1.4 0 00.84 1.28 1.4 1.4 0 001.54-.28l.05-.05a1.7 1.7 0 012.4 2.4l-.04.05a1.4 1.4 0 00-.28 1.54v.07a1.4 1.4 0 001.28.84h.15a1.7 1.7 0 010 3.4h-.08a1.4 1.4 0 00-1.28.84z
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`NavigationChrome Snapshot Tests Light mode renders correctly in light mode 1`] = `
<View
  accessibilityHint="intensity=20,tint=systemUltraThinMaterial"
  style={
    [
      {
        "borderBottomWidth": 0.5,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 5,
      },
      {
        "borderBottomColor": "rgba(60, 60, 67, 0.29)",
        "paddingTop": 47,
      },
    ]
  }
  testID="blur-view"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "space-between",
        "paddingHorizontal": 4,
      }
    }
  >
    <View
      style={
        {
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityHint="Double tap to open or close the session sidebar"
        accessibilityLabel="Toggle sidebar"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          testID="svg"
          viewBox="0 0 20 20"
          width={20}
        >
          <Text
            testID="svg-path"
          >
            M3 5h14M3 10h14M3 15h14
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        accessibilityRole="header"
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 17,
              "fontWeight": "600",
              "textAlign": "center",
            },
            {
              "color": "#000000",
            },
          ]
        }
      >
        New Chat
      </Text>
    </View>
    <View
      style={
        {
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityHint="Double tap to open the settings screen"
        accessibilityLabel="Open settings"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          testID="svg"
          viewBox="0 0 20 20"
          width={20}
        >
          <Text
            testID="svg-path"
          >
            M10 12.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z
          </Text>
          <Text
            testID="svg-path"
          >
            M16.2 12.5a1.4 1.4 0 00.28 1.54l.05.05a1.7 1.7 0 01-1.2 2.9 1.7 1.7 0 01-1.2-.5l-.05-.04a1.4 1.4 0 00-1.54-.28 1.4 1.4 0 00-.84 1.28v.15a1.7 1.7 0 01-3.4 0v-.08a1.4 1.4 0 00-.92-1.28 1.4 1.4 0 00-1.54.28l-.05.05a1.7 1.7 0 01-2.4-2.4l.04-.05a1.4 1.4 0 00.28-1.54 1.4 1.4 0 00-1.28-.84h-.15a1.7 1.7 0 010-3.4h.08a1.4 1.4 0 001.28-.92 1.4 1.4 0 00-.28-1.54l-.05-.05a1.7 1.7 0 012.4-2.4l.05.04a1.4 1.4 0 001.54.28h.07a1.4 1.4 0 00.84-1.28v-.15a1.7 1.7 0 013.4 0v.08a1.4 1.4 0 00.84 1.28 1.4 1.4 0 001.54-.28l.05-.05a1.7 1.7 0 012.4 2.4l-.04.05a1.4 1.4 0 00-.28 1.54v.07a1.4 1.4 0 001.28.84h.15a1.7 1.7 0 010 3.4h-.08a1.4 1.4 0 00-1.28.84z
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`NavigationChrome Snapshot Tests Light mode renders with a long title in light mode 1`] = `
<View
  accessibilityHint="intensity=20,tint=systemUltraThinMaterial"
  style={
    [
      {
        "borderBottomWidth": 0.5,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 5,
      },
      {
        "borderBottomColor": "rgba(60, 60, 67, 0.29)",
        "paddingTop": 47,
      },
    ]
  }
  testID="blur-view"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "space-between",
        "paddingHorizontal": 4,
      }
    }
  >
    <View
      style={
        {
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityHint="Double tap to open or close the session sidebar"
        accessibilityLabel="Toggle sidebar"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          testID="svg"
          viewBox="0 0 20 20"
          width={20}
        >
          <Text
            testID="svg-path"
          >
            M3 5h14M3 10h14M3 15h14
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        accessibilityRole="header"
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 17,
              "fontWeight": "600",
              "textAlign": "center",
            },
            {
              "color": "#000000",
            },
          ]
        }
      >
        This is a very long session title that should be truncated with an ellipsis
      </Text>
    </View>
    <View
      style={
        {
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityHint="Double tap to open the settings screen"
        accessibilityLabel="Open settings"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          testID="svg"
          viewBox="0 0 20 20"
          width={20}
        >
          <Text
            testID="svg-path"
          >
            M10 12.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z
          </Text>
          <Text
            testID="svg-path"
          >
            M16.2 12.5a1.4 1.4 0 00.28 1.54l.05.05a1.7 1.7 0 01-1.2 2.9 1.7 1.7 0 01-1.2-.5l-.05-.04a1.4 1.4 0 00-1.54-.28 1.4 1.4 0 00-.84 1.28v.15a1.7 1.7 0 01-3.4 0v-.08a1.4 1.4 0 00-.92-1.28 1.4 1.4 0 00-1.54.28l-.05.05a1.7 1.7 0 01-2.4-2.4l.04-.05a1.4 1.4 0 00.28-1.54 1.4 1.4 0 00-1.28-.84h-.15a1.7 1.7 0 010-3.4h.08a1.4 1.4 0 001.28-.92 1.4 1.4 0 00-.28-1.54l-.05-.05a1.7 1.7 0 012.4-2.4l.05.04a1.4 1.4 0 001.54.28h.07a1.4 1.4 0 00.84-1.28v-.15a1.7 1.7 0 013.4 0v.08a1.4 1.4 0 00.84 1.28 1.4 1.4 0 001.54-.28l.05-.05a1.7 1.7 0 012.4 2.4l-.04.05a1.4 1.4 0 00-.28 1.54v.07a1.4 1.4 0 001.28.84h.15a1.7 1.7 0 010 3.4h-.08a1.4 1.4 0 00-1.28.84z
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
